--- a/ash-window/Cargo.toml
+++ b/ash-window/Cargo.toml
@@ -14,7 +14,7 @@ exclude = [".github/*"]
 workspace = ".."
 
 [dependencies]
-ash = { path = "../ash", version = "0.35", default-features = false }
+ash = "^0.35"
 raw-window-handle = "^0.4"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
