Revert "Updated raw-window-handle"
This reverts commit 77e99ac550027e44d6dcc83ad5c02865e2635a53.

--- a/ash-window/Cargo.toml
+++ b/ash-window/Cargo.toml
@@ -14,7 +14,7 @@ exclude = [".github/*"]
 workspace = ".."
 
 [dependencies]
-ash = "^0.35"
+ash = { path = "../ash", version = "0.35", default-features = false }
 raw-window-handle = "^0.4"
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
